--- a/src/i18n/locales/en/destinations.json
+++ b/src/i18n/locales/en/destinations.json
@@ -1,7 +1,7 @@
 {
   "hero image": {
     "title": "Featured destinations in Dalat",
-    "subtitle": "Lorrem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut"
+    "subtitle": "Lorrem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut"
   },
   "destinations": {
     "field": "Destinations",
