--- a/src/i18n/locales/en/navbar.json
+++ b/src/i18n/locales/en/navbar.json
@@ -2,5 +2,6 @@
   "home": "Home",
   "destinations": "Destinations",
   "articles": "Articles",
-  "login": "Sign in"
+  "login": "Sign in",
+  "food":"Food"
 }
