--- a/src/i18n/locales/vi/articles.json
+++ b/src/i18n/locales/vi/articles.json
@@ -1,6 +1,6 @@
 {
   "title": "Tất cả bài viết",
-  "subtitle": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad",
+  "subtitle": "Lorem  dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad",
   "save": "Lưu",
   "share": "Chia sẻ",
   "filters": "Bộ lọc",
